--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,9 @@
 
     "ConnectionStrings": {
         //"BookStoreContext": "Server={localhost};Database=bookstoreDB;Trusted_Connection=True;TrustServerCertificate=True;",
-        "BookStoreContext": "Server=DESKTOP-KF2IUCD\\SQLEXPRESS;Database=bookstoreDB;Trusted_Connection=True;TrustServerCertificate=True;"
     },
+  "ConnectionStrings": {
+    //"BookStoreContext": "Server={localhost};Database=bookstoreDB;Trusted_Connection=True;TrustServerCertificate=True;",
+  },
     "AllowedHosts": "*"
 }
