--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,7 @@
     },
   "ConnectionStrings": {
     //"BookStoreContext": "Server={localhost};Database=bookstoreDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "BookStoreContext": "Server=LAPTOP-6GBIN1RS;Database=bookstoreDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
     "AllowedHosts": "*"
 }
